--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 </style>
 
 <body>
+	<div class="overlay" id="overlay"></div>
+	<div class="popup" id="popup">
+		<p><b>Attention:</b> This site will be removed from January 5th at the request of School 42. To continue accessing it, contact me at <a href="mailto:42-evals@gmx.ch">42-evals@gmx.ch</a></p>
+		<button onclick="closePopup()">Close this windows</button>
+	</div>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('./js/service-worker.js')
@@ -367,6 +372,7 @@
     };
   }
 </script>
+<script src="js/script.js"></script>
 
 
 
